--- a/dosrok/templates/index.html
+++ b/dosrok/templates/index.html
@@ -7,10 +7,13 @@
     {% load staticfiles %}
     <style type="text/css">
         .spoiler_body {display:none;}
-        .spoiler_links {cursor:pointer;}
+        .spoiler_links {cursor:pointer; text-decoration: none; color: rgb(150, 150, 150); border-bottom: 1px dotted}
+        .title {font-weight: bold;}
+        .main_title {font-weight: bold; text-align: center;}
     </style>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    
+    <!-- <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"> -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}" type="text/javascript"></script>
     
@@ -33,65 +36,172 @@
     
     <div style="margin:60px">
     
-    <p style="align:center"> КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО {{ subject_name }} </p>
+    <h3 class="main_title"> 
+    КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО ТФКП 
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    </h3>
     
-    <p>
     {% if is_opened %}
-    Текущее состояние: конкурс открыт.
-    Дата окончания конкурса: {{ ending_date }}
-    {% else %}  
-    Текущее состояние: конкурс закрыт.
-    {% endif %}
-    </p>
+    <div class="well">
+    <div>
+    <span class="title">Текущее состояние:</span> конкурс открыт.
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    </div>
+
+    <div>
+    <span class="title">Дата окончания конкурса:</span> {{ ending_date }}
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    </div>
     
-   
-    <div style="display:inline-block">
-    Правила конкурса  
+    </div>
+    {% else %}  
+    <div class="well">
+    <span class="title">Текущее состояние:</span> конкурс закрыт.
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    </div>
+    {% endif %}
+    
+    <div class="well">
+    <span class="title">Правила конкурса</span>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
         <p>
         ЭТО ПРАВИЛА КОНКУРСА, ДЕТКА!
         </p>
+    </div>   
+    </div>
+    
+    <div class="well">
+    <span class="title">Список задач</span>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+    </button>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    (<a href="" class="spoiler_links">развернуть</a>)
+    <div class="spoiler_body">
+        <ol>
+        <li> Перваянах (формат) </li>
+        </ol>
     </div>
     </div>
-        
-    <p>
-    Список задач (развернуть/свернуть).
-    </p>
-    
-    <p>
-    Список участников (развернуть/свернуть).
-    </p>
-    
-    <p>
+
+    <div class="well">
+    <span class="title">Список участников</span>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+    </button>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+
+    (<a href="" class="spoiler_links">развернуть</a>)
+    <div class="spoiler_body">
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Группа</th>
+        <th>Номера решённых задач</th>
+        <th>Необходимые условия</th>
+        <th>Рейтинг</th>
+        <th>Итог</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Иван</td>
+        <td>Иванов</td>
+        <td>221</td>
+        <td>1, 2, 5</td>
+        <td>выполнены</td>
+        <td>100</td>
+        <td>допущен</td>
+      </tr>
+    </tbody>
+    </table>
+    </div>
+    </div>
+
+
     {% if is_opened %}
     {% else %}
-    Итоги. Список допущенных к досрочному экзамену (развернуть/свернуть).
+    <div class="well">
+    <span class="title">Итоги. Список допущенных к досрочному экзамену</span>
+    (<a href="" class="spoiler_links">развернуть</a>)
+    <div class="spoiler_body">
+        <ol>
+        <li>Первый Допущенный, группа</li>
+        </ol>
+    </div>
+    </div>
     {% endif %}
-    </p>
     
+    <div class="well">
     <p>
-    Дата проведения досрочного экзамена: 
+    <span class="title">Дата проведения досрочного экзамена:</span>
         {% if date %}
         {{ date }}
         {% else %}
         неизвестна
         {% endif %}
-        
-        Место проведения досрочного экзамена: 
-            {% if place %}
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    </p>
+    <p>
+    <span class="title">Место проведения досрочного экзамена:</span>
+        {% if place %}
             {{ place }}
-            {% else %}
+        {% else %}
             неизвестно
-            {% endif %}
-            </p>
-            
-            <p>
-            Экзаменационная программа (развернуть/свернуть).
-            </p>
-            <p>
-            Примеры задач на досрочном экзамене (развернуть/свернуть).
-            </p>
-            </div>
+        {% endif %}
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    </p>
+    </div>
+
+    <div class="well">
+    <span class="title">Экзаменационная программа</span>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    (<a href="" class="spoiler_links">развернуть</a>)
+    <div class="spoiler_body">
+        Ссылка на программу (формат)
+    </div>
+    </div>
+    
+    <div class="well">
+    <span class="title">Примеры задач досрочного экзамена</span>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+    </button>
+    <button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+    (<a href="" class="spoiler_links">развернуть</a>)
+    <div class="spoiler_body">
+        <ol>
+        <li>Первая задача (формат)</li>
+        </ol>
+    </div>
+    </div>
+
+    </div>
     </body>
 </html>
