--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -98,12 +98,9 @@
     <div class="well">
     <span class="title">Список задач</span>
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_problem_add' %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    </button>
-    <button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
@@ -115,15 +112,23 @@
         <th>Название</th>
         <th>Количество зачтённых решений</th>
         <th>Рейтинг</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
         {% for problem in problem_list %}
       <tr>
         <td>{{ forloop.counter0|add:1 }}</td>
-        <td>{{ problem.title }}<a href="/problemurl"> (формат)</a></td>
+        <td>{{ problem.title }}(<a href="/problemurl">формат</a>)</td>
         <td>{{problem.student_num}}</td>
         <td>{{problem.rating}}</td>
+        <td>
+        {% if user.is_authenticated %}
+        <a href="{% url 'admin:main_problem_change' problem.id %}"><button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button></a>
+        {% endif %}
+        </td>
       </tr>
       {% endfor %}
     </tbody>
@@ -135,12 +140,9 @@
     <div class="well">
     <span class="title">Список участников</span>
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_student_add' %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    </button>
-    <button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
 
     (<a href="" class="spoiler_links">развернуть</a>)
@@ -157,6 +159,7 @@
         <th>Необходимые условия</th>
         <th>Рейтинг</th>
         <th>Итог</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -170,6 +173,13 @@
         <td>{% if student.nec_conditions %} выполнены {% else %} <span style="color: red">не выполнены</span> {% endif %}</td>
         <td>{{student.rating}}</td>
         <td>{% if student.is_allowed %} допущен {% else %} <span style="color: red">не допущен</span> {% endif %}</td>
+        <td>
+        {% if user.is_authenticated %}
+        <a href="{% url 'admin:main_student_change' student.id %}"><button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button></a>
+        </td>
+        {% endif %}
       </tr>
 	  {% endfor %}
     </tbody>
@@ -271,7 +281,7 @@
         {% for problem in problem_list %} <!-- other list should be there! -->
       <tr>
         <td>{{ forloop.counter0|add:1 }}</td>
-        <td>{{ problem.title }}<a href="/problemurl"> (формат)</a></td>
+        <td>{{ problem.title }}(<a href="/problemurl">формат</a>)</td>
       </tr>
       {% endfor %}
     </tbody>
