--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -119,9 +119,15 @@
         {% for problem in problem_list %}
       <tr>
         <td>{{ forloop.counter0|add:1 }}</td>
-        <td>{{ problem.title }}(<a href="/problemurl">формат</a>)</td>
-        <td>{{problem.student_num}}</td>
-        <td>{{problem.rating}}</td>
+        <td>{{ problem.title }} (<a href="/problemurl">формат</a>)</td>
+        <td>{{ problem.student_num }}</td>
+        <td>
+        {% if problem.rating %}
+        {{ problem.rating }}
+        {% else %}
+        &infin;
+        {% endif %}
+        </td>
         <td>
         {% if user.is_authenticated %}
         <a href="{% url 'admin:main_problem_change' problem.id %}"><button type="button" class="btn btn-default btn-sm">
@@ -166,12 +172,12 @@
 	{% for student in student_list %}
       <tr>
         <td>{{ forloop.counter0|add:1 }}</td>
-		<td>{{student.firstname}}</td>
-        <td>{{student.lastname}}</td>
-        <td>{{student.group}}</td>
-        <td>{{student.get_problem_list}}</td>
+		<td>{{ student.firstname }}</td>
+        <td>{{ student.lastname }}</td>
+        <td>{{ student.group }}</td>
+        <td>{{ student.get_problem_list }}</td>
         <td>{% if student.nec_conditions %} выполнены {% else %} <span style="color: red">не выполнены</span> {% endif %}</td>
-        <td>{{student.rating}}</td>
+        <td>{{ student.rating }}</td>
         <td>{% if student.is_allowed %} допущен {% else %} <span style="color: red">не допущен</span> {% endif %}</td>
         <td>
         {% if user.is_authenticated %}
@@ -259,14 +265,13 @@
     
     <div class="well">
     <span class="title">Примеры задач досрочного экзамена</span>
+    {% comment %}
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_example_add' %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    </button>
-    <button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
+    {% endcomment %}
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
      <div class="table-responsive">
@@ -275,6 +280,7 @@
       <tr>
         <th>#</th>
         <th>Задача</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -282,6 +288,15 @@
       <tr>
         <td>{{ forloop.counter0|add:1 }}</td>
         <td>{{ problem.title }}(<a href="/problemurl">формат</a>)</td>
+        <td>
+        {% comment %}
+        {% if user.is_authenticated %}
+        <a href="{% url 'admin:main_example_change' problem.id %}"><button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button></a>
+        {% endif %}
+        {% endcomment %}
+        </td>
       </tr>
       {% endfor %}
     </tbody>
