--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,6 +5,8 @@
     <title> Досрок.ру </title>
 
     {% load staticfiles %}
+    {% load tags %}
+
     <style type="text/css">
         .spoiler_body {display:none;}
         .spoiler_links {cursor:pointer; text-decoration: none; color: rgb(150, 150, 150); border-bottom: 1px dotted}
@@ -123,7 +125,7 @@
         {% for problem in problem_list %}
       <tr>
         <td>{{ problem.number }}</td>
-        <td>{{ problem.title }} (<a href="/problemurl">формат</a>)</td>
+        <td>{{ problem.title }} (<a href="{{ problem.statement.url }}">{{ problem.statement.url|extension }}</a>)</td>
         <td>{{ problem.get_state_display }}</td>
         <td>{% if problem.end_date %}
         {{ problem.end_date }}
@@ -140,13 +142,13 @@
         {% endif %}
         </td>
         <td>
-        {% if problem.solution %}
-        {{ problem.solution }}
+        {% if solution %}
+        Решение (<a href="{{ problem.solution.url }}">{{ problem.solution.url|extension }}</a>)
         {% endif %}
         </td>
         <td>
-        {% if problem.comment %}
-        {{ problem.rating }}
+        {% if comment %}
+        Комментарий (<a href="{{ problem.comment.url }}">{{ problem.comment.url|extension }}</a>)
         {% endif %}
         </td>
         <td>
@@ -197,9 +199,9 @@
         <td>{{ student.lastname }}</td>
         <td>{{ student.group }}</td>
         <td>{{ student.get_problem_list }}</td>
-        <td>{% if student.nec_conditions %} выполнены {% else %} <span style="color: red">не выполнены</span> {% endif %}</td>
+        <td>{% if student.nec_conditions %} выполнены {% else %} <span style="color: grey">не выполнены</span> {% endif %}</td>
         <td>{{ student.rating }}</td>
-        <td>{% if student.is_allowed %} допущен {% else %} <span style="color: red">не допущен</span> {% endif %}</td>
+        <td>{% if student.is_allowed %} допущен {% else %} <span style="color: grey">не допущен</span> {% endif %}</td>
         <td>
         {% if user.is_authenticated %}
         <a href="{% url 'admin:main_student_change' student.id %}"><button type="button" class="btn btn-default btn-sm">
@@ -301,6 +303,7 @@
       <tr>
         <th>#</th>
         <th>Задача</th>
+        <th>Решение</th>
         <th></th>
       </tr>
     </thead>
@@ -309,14 +312,18 @@
         {% for problem in example_list %}
       <tr>
         <td>{{ forloop.counter0|add:1 }}</td>
-        <td>{{ problem.title }} (<a href="/problemurl">формат</a>)</td>
+        <td>{{ problem.title }} (<a href="{{ problem.statement.url }}">{{ problem.statement.url|extension }}</a>)</td>
+        <td>
+        {% if solution %}
+        Решение (<a href="{{ problem.solution.url }}">{{ problem.solution.url|extension }}</a>)
+        {% endif %}
+        </td>
         <td>
         {% if user.is_authenticated %}
         <a href="{% url 'admin:main_example_change' problem.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
         {% endif %}
-       
         </td>
       </tr>
       {% endfor %}
