--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -68,7 +68,7 @@
     <div style="margin:60px">
     
     <h3 class="main_title"> 
-    КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО ТФКП 
+		КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО {{ subject.title }} 
     {% if user.is_authenticated %}
     <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
