--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -76,10 +76,10 @@
     {% endif %}
     </h3>
     
-    {% if is_opened %}
+    {% if subject.is_opened %}
     <div class="well">
     <div>
-    <span class="title">Текущее состояние:</span> конкурс открыт.
+    <span class="title">Текущее состояние:</span> конкурс открыт
     {% if user.is_authenticated %}
     <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -99,7 +99,7 @@
     </div>
     {% else %}  
     <div class="well">
-    <span class="title">Текущее состояние:</span> конкурс закрыт.
+    <span class="title">Текущее состояние:</span> конкурс закрыт
     {% if user.is_authenticated %}
     <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -118,7 +118,7 @@
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
         <p>
-        ЭТО ПРАВИЛА КОНКУРСА, ДЕТКА!
+        {{ subject.rules }}
         </p>
     </div>   
     </div>
@@ -338,7 +338,7 @@
     <div class="well">
     <p>
     <span class="title">Дата проведения досрочного экзамена:</span>
-        {% if date %}
+        {% if subject.date %}
         {{ date }}
         {% else %}
         неизвестна
@@ -351,7 +351,7 @@
     </p>
     <p>
     <span class="title">Место проведения досрочного экзамена:</span>
-        {% if place %}
+        {% if subject.place %}
             {{ place }}
         {% else %}
             неизвестно
@@ -373,19 +373,21 @@
     {% endif %}
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
-        Ссылка на программу (формат)
+        {% if subject.program %}
+        (<a href="{{ subject.program.url }}">{{ subject.program.url|extension }}</a>)
+        {% else %}
+        Программа экзамена не загружена.
+        {% endif %}
     </div>
     </div>
     
     <div class="well">
     <span class="title">Примеры задач досрочного экзамена</span>
-    {% comment %}
     {% if user.is_authenticated %}
         <a href="{% url 'admin:main_example_add' %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         </button></a>
     {% endif %}
-    {% endcomment %}
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
      <div class="table-responsive">
