--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -70,31 +70,31 @@
     <h3 class="main_title"> 
 		КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО КУРСУ &laquo;{{ subject.title|upper }}&raquo;
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        <a href="{% url 'admin:main_student_add' %}"><button type="button" class="btn btn-default btn-sm">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        </button></a>
     {% endif %}
     </h3>
     
     {% if subject.is_opened %}
     <div class="well">
-    <div>
+    <p>
     <span class="title">Текущее состояние:</span> конкурс открыт
     {% if user.is_authenticated %}
     <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
     </button>
     {% endif %}
-    </div>
+    </p>
 
-    <div>
+    <p>
     <span class="title">Дата окончания конкурса:</span> {{ ending_date }}
     {% if user.is_authenticated %}
     <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
     </button>
     {% endif %}
-    </div>
+    </p>
     
     </div>
     {% else %}  
@@ -339,27 +339,27 @@
     <p>
     <span class="title">Дата проведения досрочного экзамена:</span>
         {% if subject.date %}
-        {{ date }}
+        {{ subject.date }}
         {% else %}
         неизвестна
         {% endif %}
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
     </p>
     <p>
     <span class="title">Место проведения досрочного экзамена:</span>
         {% if subject.place %}
-            {{ place }}
+            {{ subject.place }}
         {% else %}
             неизвестно
         {% endif %}
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
     </p>
     </div>
@@ -367,17 +367,19 @@
     <div class="well">
     <span class="title">Экзаменационная программа</span>
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
+        <p>
         {% if subject.program %}
-        (<a href="{{ subject.program.url }}">{{ subject.program.url|extension }}</a>)
+        Программа экзамена (<a href="{{ subject.program.url }}">{{ subject.program.url|extension }}</a>)
         {% else %}
-        Программа экзамена не загружена.
+        Программа экзамена не загружена
         {% endif %}
+        </p>
     </div>
     </div>
     
