--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -71,7 +71,7 @@
 		КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО КУРСУ &laquo;{{ subject.title|upper }}&raquo;
     {% if user.is_authenticated %}
         <a href="{% url 'admin:main_student_add' %}"><button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
     {% endif %}
     </h3>
