--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -70,7 +70,7 @@
     <h3 class="main_title"> 
 		КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО КУРСУ &laquo;{{ subject.title|upper }}&raquo;
     {% if user.is_authenticated %}
-        <a href="{% url 'admin:main_student_add' %}"><button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
     {% endif %}
@@ -81,18 +81,23 @@
     <p>
     <span class="title">Текущее состояние:</span> конкурс открыт
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
     </p>
 
     <p>
-    <span class="title">Дата окончания конкурса:</span> {{ ending_date }}
+    <span class="title">Дата окончания конкурса:</span> 
+    {% if subject.end_date %}
+        {{ subject.end_date }}
+    {% else %}
+        неизвестно
+    {% endif %}
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
     </p>
     
@@ -101,9 +106,9 @@
     <div class="well">
     <span class="title">Текущее состояние:</span> конкурс закрыт
     {% if user.is_authenticated %}
-    <button type="button" class="btn btn-default btn-sm">
+        <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+        </button></a>
     {% endif %}
     </div>
     {% endif %}
@@ -118,7 +123,7 @@
     (<a href="" class="spoiler_links">развернуть</a>)
     <div class="spoiler_body">
         <p>
-        {{ subject.rules }}
+        {{ subject.rules|linebreaks }}
         </p>
     </div>   
     </div>
@@ -339,7 +344,7 @@
     <p>
     <span class="title">Дата проведения досрочного экзамена:</span>
         {% if subject.date %}
-        {{ subject.date }}
+        {{ subject.exam_date }}
         {% else %}
         неизвестна
         {% endif %}
