--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -343,7 +343,7 @@
     <div class="well">
     <p>
     <span class="title">Дата проведения досрочного экзамена:</span>
-        {% if subject.date %}
+        {% if subject.exam_date %}
         {{ subject.exam_date }}
         {% else %}
         неизвестна
