--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -69,7 +69,7 @@
     
     <h3 class="main_title"> 
 		КОНКУРС ЗА ПРАВО ПОПАСТЬ НА ДОСРОЧНЫЙ ЭКЗАМЕН ПО КУРСУ &laquo;{{ subject.title|upper }}&raquo;
-    {% if user.is_authenticated %}
+    {% if user.is_staff %}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -80,7 +80,7 @@
     <div class="well">
     <p>
     <span class="title">Текущее состояние:</span> конкурс открыт
-    {% if user.is_authenticated %}
+    {% if user.is_staff %}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -94,7 +94,7 @@
     {% else %}
         неизвестно
     {% endif %}
-    {% if user.is_authenticated %}
+    {% if user.is_staff %}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -105,7 +105,7 @@
     {% else %}  
     <div class="well">
     <span class="title">Текущее состояние:</span> конкурс закрыт
-    {% if user.is_authenticated %}
+    {% if user.is_staff %}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -115,7 +115,7 @@
     
     <div class="well">
     <span class="title">Правила конкурса</span>
-    {% if user.is_authenticated %}
+    {% if user.is_staff%}
     <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
     </button>
@@ -130,7 +130,7 @@
     
     <div class="well">
     <span class="title">Список задач</span>
-    {% if user.is_authenticated %}
+    {% if user.is_staff%}
         <a href="{% url 'admin:main_problem_add' %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         </button></a>
@@ -167,15 +167,23 @@
         {% if problem.is_title_hidden %}
             скрыто
         {% else %}
-            {{ problem.title }} (<a href="{{ problem.statement.url }}">{{ problem.statement.url|extension }}</a>)
+            {{ problem.title }}
         {% endif %}
+        {% if not problem.is_statement_hidden %}
+            (<a href="{{ problem.statement.url }}">{{ problem.statement.url|extension }}</a>)
+        {% endif %}
+
         </td>
 
         <td>
         {% if problem.is_state_hidden %}
             скрыто
         {% else %}
-            {{ problem.get_state_display }}
+			{% if problem.state%}
+				Конкурс открыт
+			{% else %}
+				Конкурс закрыт
+			{% endif %}
         {% endif %}
         </td>
 
@@ -212,27 +220,27 @@
         </td>
 
         <td>
-        {% if problem.is_number_hidden %}
+        {% if problem.is_solution_hidden %}
             скрыто
         {% else %}
-            {% if solution %}
+            {% if problem.solution %}
                 Решение (<a href="{{ problem.solution.url }}">{{ problem.solution.url|extension }}</a>)
             {% endif %}
         {% endif %}
         </td>
 
         <td>
-        {% if problem.is_number_hidden %}
+        {% if problem.is_comment_hidden %}
             скрыто
         {% else %}
-            {% if comment %}
+            {% if problem.comment %}
                 Комментарий (<a href="{{ problem.comment.url }}">{{ problem.comment.url|extension }}</a>)
             {% endif %}
         {% endif %}
         </td>
 
         <td>
-        {% if user.is_authenticated %}
+        {% if user.is_staff%}
             <a href="{% url 'admin:main_problem_change' problem.id %}"><button type="button" class="btn btn-default btn-sm">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button></a>
         {% endif %}
@@ -247,7 +255,7 @@
 
     <div class="well">
     <span class="title">Список участников</span>
-    {% if user.is_authenticated %}
+    {% if user.is_staff%}
         <a href="{% url 'admin:main_student_add' %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         </button></a>
@@ -299,7 +307,7 @@
         {% endif %}
         </td>
         <td>
-        {% if user.is_authenticated %}
+        {% if user.is_staff%}
         <a href="{% url 'admin:main_student_change' student.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -348,7 +356,7 @@
         {% else %}
         неизвестна
         {% endif %}
-    {% if user.is_authenticated %}
+    {% if user.is_staff%}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -361,7 +369,7 @@
         {% else %}
             неизвестно
         {% endif %}
-    {% if user.is_authenticated %}
+    {% if user.is_staff%}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -371,7 +379,7 @@
 
     <div class="well">
     <span class="title">Экзаменационная программа</span>
-    {% if user.is_authenticated %}
+    {% if user.is_staff%}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
@@ -390,7 +398,7 @@
     
     <div class="well">
     <span class="title">Примеры задач досрочного экзамена</span>
-    {% if user.is_authenticated %}
+    {% if user.is_staff%}
         <a href="{% url 'admin:main_example_add' %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         </button></a>
@@ -403,7 +411,7 @@
       <tr>
         <th>#</th>
         <th>Задача</th>
-        <th>Решение</th>
+        <th>Комментарий</th>
         <th></th>
       </tr>
     </thead>
@@ -413,12 +421,12 @@
         <td>{{ forloop.counter0|add:1 }}</td>
         <td>{{ problem.title }} (<a href="{{ problem.statement.url }}">{{ problem.statement.url|extension }}</a>)</td>
         <td>
-        {% if solution %}
-        Решение (<a href="{{ problem.solution.url }}">{{ problem.solution.url|extension }}</a>)
+        {% if problem.comment %}
+        <a href="{{ problem.comment.url }}">{{ problem.comment.url|extension }}</a>
         {% endif %}
         </td>
         <td>
-        {% if user.is_authenticated %}
+        {% if user.is_staff%}
         <a href="{% url 'admin:main_example_change' problem.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
