--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -77,17 +77,16 @@
     </h3>
     
     {% if subject.is_opened %}
-    <div class="well">
-    <p>
+    <div class="well clearfix">
+	<div class='pull-left'>
     <span class="title">Текущее состояние:</span> конкурс открыт
     {% if user.is_staff %}
         <a href="{% url 'admin:main_subject_change' subject.id %}"><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
     {% endif %}
-    </p>
-
-    <p>
+	</div>
+	<div class='pull-right'>
     <span class="title">Дата окончания конкурса:</span> 
     {% if subject.end_date %}
         {{ subject.end_date }}
@@ -99,7 +98,7 @@
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
     {% endif %}
-    </p>
+	</div>
     
     </div>
     {% else %}  
@@ -348,8 +347,8 @@
     </div>
     {% endif %}
     
-    <div class="well">
-    <p>
+    <div class="well clearfix">
+	<div class='pull-left'>
     <span class="title">Дата проведения досрочного экзамена:</span>
         {% if subject.exam_date %}
         {{ subject.exam_date }}
@@ -361,8 +360,8 @@
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
     {% endif %}
-    </p>
-    <p>
+	</div>
+	<div class='pull-right'>
     <span class="title">Место проведения досрочного экзамена:</span>
         {% if subject.place %}
             {{ subject.place }}
@@ -374,7 +373,7 @@
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button></a>
     {% endif %}
-    </p>
+    </div>
     </div>
 
     <div class="well">
